--- a/app/views/halo4/service_record/index.html.erb
+++ b/app/views/halo4/service_record/index.html.erb
@@ -3,6 +3,7 @@
 <% content_for :has_footer, true %>
 <% content_for :halo4_active, 'overview' %>
 <% content_for :scripts do %>
+<script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js"></script>
 <script>
 	var ctx = document.getElementById('game-history-split-chart').getContext('2d');
 	var chart = new Chart(ctx).Doughnut([ 
