--- a/app/assets/stylesheets/halo4/home.css.scss
+++ b/app/assets/stylesheets/halo4/home.css.scss
@@ -98,4 +98,28 @@ body.halo4_home {
 			margin: 80px 0;
 		}
 	}
+	.highlight-sector {
+		margin-top: 80px;
+		background: #eee;
+		height: 350px;
+		background-repeat: no-repeat;
+
+		> .container {
+			> h1 {
+				margin-top: 70px;
+				font-size: 55px;
+			}
+			> p {
+				font-size: 20px;
+			}
+		}
+	}
+	.leaferboards {
+		text-align: left;
+		background-position: right center;
+	}
+	.top-ten {
+		text-align: right;
+		background-position: left center;
+	}
 }
