Started work on challenges page

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -324,7 +324,7 @@ textarea {
 }
 
 a {
-  color: #428bca;
+  color: #3d3d7c;
   text-decoration: none;
 }
 
@@ -419,7 +419,7 @@ cite {
 }
 
 .text-primary {
-  color: #428bca;
+  color: #3d3d7c;
 }
 
 .text-warning {
@@ -2080,7 +2080,7 @@ fieldset[disabled] .btn-default.active {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #428bca;
+  background-color: #3d3d7c;
   border-color: #357ebd;
 }
 
@@ -2115,7 +2115,7 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #428bca;
+  background-color: #3d3d7c;
   border-color: #357ebd;
 }
 
@@ -2285,7 +2285,7 @@ fieldset[disabled] .btn-info.active {
 
 .btn-link {
   font-weight: normal;
-  color: #428bca;
+  color: #3d3d7c;
   cursor: pointer;
   border-radius: 0;
 }
@@ -3268,7 +3268,7 @@ input[type="button"].btn-block {
 .dropdown-menu > li > a:focus {
   color: #ffffff;
   text-decoration: none;
-  background-color: #428bca;
+  background-color: #3d3d7c;
 }
 
 .dropdown-menu > .active > a,
@@ -3276,7 +3276,7 @@ input[type="button"].btn-block {
 .dropdown-menu > .active > a:focus {
   color: #ffffff;
   text-decoration: none;
-  background-color: #428bca;
+  background-color: #3d3d7c;
   outline: 0;
 }
 
@@ -3832,7 +3832,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #428bca;
+  border-color: #3d3d7c;
 }
 
 .nav .nav-divider {
@@ -3921,7 +3921,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #428bca;
+  background-color: #3d3d7c;
 }
 
 .nav-stacked > li {
@@ -3996,8 +3996,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .nav .caret {
-  border-top-color: #428bca;
-  border-bottom-color: #428bca;
+  border-top-color: #3d3d7c;
+  border-bottom-color: #3d3d7c;
 }
 
 .nav a:hover .caret {
@@ -4682,8 +4682,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
   z-index: 2;
   color: #ffffff;
   cursor: default;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #3d3d7c;
+  border-color: #3d3d7c;
 }
 
 .pagination > .disabled > span,
@@ -4831,7 +4831,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .label-primary {
-  background-color: #428bca;
+  background-color: #3d3d7c;
 }
 
 .label-primary[href]:hover,
@@ -4908,7 +4908,7 @@ a.badge:focus {
 
 a.list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #428bca;
+  color: #3d3d7c;
   background-color: #ffffff;
 }
 
@@ -4975,7 +4975,7 @@ a.list-group-item.active > .badge,
 
 a.thumbnail:hover,
 a.thumbnail:focus {
-  border-color: #428bca;
+  border-color: #3d3d7c;
 }
 
 .thumbnail > img {
@@ -5133,7 +5133,7 @@ a.thumbnail:focus {
   font-size: 12px;
   color: #ffffff;
   text-align: center;
-  background-color: #428bca;
+  background-color: #3d3d7c;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
           box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5288,8 +5288,8 @@ a.list-group-item:focus {
 .list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #3d3d7c;
+  border-color: #3d3d7c;
 }
 
 .list-group-item.active .list-group-item-heading,
@@ -5446,21 +5446,21 @@ a.list-group-item:focus {
 }
 
 .panel-primary {
-  border-color: #428bca;
+  border-color: #3d3d7c;
 }
 
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #428bca;
-  border-color: #428bca;
+  background-color: #3d3d7c;
+  border-color: #3d3d7c;
 }
 
 .panel-primary > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #428bca;
+  border-top-color: #3d3d7c;
 }
 
 .panel-primary > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #428bca;
+  border-bottom-color: #3d3d7c;
 }
 
 .panel-success {
