finished up challenges page.

--- a/app/views/halo4/challenges/index.html.erb
+++ b/app/views/halo4/challenges/index.html.erb
@@ -50,6 +50,10 @@
 									<p>
 										<%= challenge['Description'] %>
 									</p>
+									<span>
+										<strong>Worth:</strong>
+										<%= challenge['XpReward'] %> Xp
+									</span>
 									<div class="countdown hidden-xs hidden-sm">
 										<% content_for :scripts do %>
 											<script type="text/javascript">
