--- a/app/views/halo4/home/index.html.erb
+++ b/app/views/halo4/home/index.html.erb
@@ -13,6 +13,10 @@
 	</div>
 </div>
 
+<div class="container">
+	<%= render partial: 'partials/flash', locals: { flash: flash } %>
+</div>
+
 <div class="container stats-marketing">
 	<div class="row central">
 		<div class="col-md-4">
