--- a/app/views/halo4/challenges/index.html.erb
+++ b/app/views/halo4/challenges/index.html.erb
@@ -15,6 +15,10 @@
 	</div>
 </div>
 
+<div class="container">
+	<%= render partial: 'partials/flash', locals: { flash: flash } %>
+</div>
+
 <div class="container challenges-container">
 	<div class="row">
 		<div class="col-md-3">
